--- a/elements.html
+++ b/elements.html
@@ -144,7 +144,7 @@
 									<h2>Product Photos</h2>
 									<div class="box alt">
 										<div class="row gtr-uniform">
-											<div class="col-12"><span class="image fit"><img src="images/pic13.jpg" alt="" /></span></div>
+											<div class="col-12"><span class="image fit"><img src="images/pic13.png" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
